chore: atualizar ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
-cut-rod-problem/valor_total_venda.png
-cut-rod-problem/tempo_execucao.png
-cut-rod-problem/output.txt
+valor_total_venda.png
+tempo_execucao.png
+output.txt
