refactor: atualizar .gitignore para incluir novos padrões de arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-valor_total_venda.png
-tempo_execucao.png
-output.txt
-teste_em_c
-teste_otimizado
-novo_teste_py
+*.png
+*.txt
+*.jpg
+rod_cutting
+main.o
+rod_cutting.o
